--- a/notebooks/process_data/process_qna.ipynb
+++ b/notebooks/process_data/process_qna.ipynb
@@ -2290,7 +2290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "swobuv",
    "language": "python",
    "name": "python3"
   },
